# mantella

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: fetch-pdfium.mjs  gen-icon.mjs
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: bookmarks.rs  library.rs  mod.rs  pdf.rs  reading.rs
src-tauri/src/pdf/: engine.rs  links.rs  mod.rs  protocol.rs  renderer.rs  text.rs
src-tauri/src/store/: mod.rs  model.rs
src/lib/: shortcuts.ts
src/lib/api/: commands.ts  events.ts  protocol.ts  types.ts
src/lib/components/common/: ContextMenu.svelte  EmptyState.svelte  Icon.svelte
src/lib/components/onboarding/: Welcome.svelte
src/lib/components/reader/: BookmarkItem.svelte  BookmarkMarkers.svelte  BookmarksPanel.svelte  Page.svelte  Toolbar.svelte  Viewer.svelte  textLayer.ts
src/lib/components/settings/: SettingsModal.svelte  UpdatePrompt.svelte
src/lib/stores/: history.svelte.ts  library.svelte.ts  reader.svelte.ts  settings.svelte.ts  shortcuts.svelte.ts  ui.svelte.ts  updater.svelte.ts
src/styles/: app.css
